--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -26,12 +26,8 @@
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
 
-  <!-- <script type="text/javascript" async
-    src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML">
-  </script> -->
-
-  <!-- Google Analytics -->
-  {% include google-analytics.html %}
+  <!-- Google Analytics 
+  {% include google-analytics.html %}-->
 
   <!-- Use Jekyll SEO plugin -->
   {% seo %}
